--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,19 @@
 runtime: python
+threadsafe: yes
 env: flex
 entrypoint: gunicorn -b :$PORT app:app
 
 runtime_config:
   python_version: 3
+
+env_variables:
+    # Replace user, password, database, and instance connection name with the values obtained
+    # when configuring your Cloud SQL instance.
+    SQLALCHEMY_DATABASE_URI: >-
+      postgresql+psycopg2://postgres:asd123@/bookdb?host=/cloudsql/cs329e-idb-184123:us-central1:bookdb
+beta_settings:
+    cloud_sql_instances: cs329e-idb-184123:us-central1:bookdb
+
+handlers:
+- url: /.*
+  script: app.app
